# vzglyd-slide

./: ABI_POLICY.md  AUDIO_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  project.yml  publish.yml
src/: audio.rs  lib.rs
