[package]
name = "VRX-64-slide"
version = "0.1.0"
edition = "2024"
description = "ABI contract and data types for VZGLYD display engine slides"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vzglyd/vzglyd"
homepage = "https://github.com/vzglyd/vzglyd"
documentation = "https://docs.rs/VRX-64-slide"
readme = "README.md"
keywords = ["vzglyd", "slide", "display", "wasm", "ambient-display"]
categories = ["rendering", "embedded", "wasm"]
rust-version = "1.85"

[lib]
name = "vzglyd_slide"

[features]
## Enable GPU vertex layout helpers (`desc()`, `ATTRIBS`) for use in wgpu pipelines.
gpu = ["dep:wgpu"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
wgpu = { version = "29", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

# Reduce build artifact sizes
[profile.dev]
debug = 0
incremental = false

[profile.release]
strip = true
